[tool.poetry]
name = "queen-of-hearts"
version = "0.1.0"
description = ""
authors = ["Kingoftime <antonio_neto77@hotmail.com.br>"]
readme = "README.md"
packages = [{include = "queen_of_hearts"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
